--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.4",
     "jshint": "^2.9.4",
     "mongodb": "^2.2.0",
+    "mongodb-autoincrement": "^1.0.1",
     "morgan": "~1.7.0"
   },
   "repository": {
