--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
   "name": "lets-do-it-api",
-  "version": "1.0.0",
-  "description": "API for the to-do list manager 'Lets Do It!'",
+  "version": "0.1.0",
+  "description": "Web API (backend part) of the to-do list manager 'Lets Do It!'",
   "main": "server.js",
   "scripts": {
     "start": "node ./server.js"
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
-    "cors": "^2.8.1",
-    "debug": "~2.2.0",
-    "dotenv": "^4.0.0",
-    "express": "~4.13.4",
-    "jshint": "^2.9.4",
-    "mongodb": "^2.2.0",
-    "mongodb-autoincrement": "^1.0.1",
-    "morgan": "~1.7.0"
+    "body-parser": "1.15.1",
+    "cookie-parser": "1.4.3",
+    "cors": "2.8.1",
+    "debug": "2.2.0",
+    "express": "4.13.4",
+    "mongodb": "2.2.26",
+    "mongodb-autoincrement": "1.0.1",
+    "morgan": "1.7.0"
   },
   "repository": {
     "type": "git",
@@ -26,7 +24,8 @@
     "to-do",
     "list",
     "lets",
-    "management"
+    "management",
+    "tasks"
   ],
   "author": "Breno Wruck Schneider & Ygor Kiefer",
   "license": "ISC",
@@ -34,5 +33,7 @@
     "url": "https://github.com/coop-code/lets-do-it-api/issues"
   },
   "homepage": "https://github.com/coop-code/lets-do-it-api#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "standard": "10.0.2"
+  }
 }
