--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web API (backend part) of the to-do list manager 'Lets Do It!'",
   "main": "server.js",
   "scripts": {
-    "start": "node ./server.js"
+    "start": "node ./index.js"
   },
   "dependencies": {
     "body-parser": "1.15.1",
