--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "debug": "2.2.0",
     "express": "4.13.4",
     "mongodb": "2.2.26",
-    "mongodb-autoincrement": "1.0.1",
+    "mongoose": "^4.10.5",
     "morgan": "1.7.0"
   },
   "repository": {
