--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "2.8.1",
     "debug": "2.2.0",
     "express": "4.13.4",
+    "fast-json-patch": "^2.0.3",
     "joi": "^10.6.0",
     "mongodb": "2.2.26",
     "mongoose": "4.11.1",
