--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "4.13.4",
     "fast-json-patch": "^2.0.3",
     "joi": "^10.6.0",
+    "moment": "^2.18.1",
     "mongodb": "2.2.26",
     "mongoose": "4.11.1",
     "morgan": "1.7.0"
