--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon ./index.js"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "1.15.1",
     "cookie-parser": "1.4.3",
     "cors": "2.8.1",
