--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "body-parser": "1.15.1",
     "cookie-parser": "1.4.3",
     "cors": "2.8.1",
+    "crypto": "0.0.3",
     "debug": "2.2.0",
     "express": "4.13.4",
     "fast-json-patch": "^2.0.3",
     "joi": "^10.6.0",
+    "jsonwebtoken": "^7.4.2",
     "mongodb": "2.2.26",
-    "mongoose": "4.11.1"
+    "mongoose": "4.11.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0"
   },
   "repository": {
     "type": "git",
